--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -1,14 +1,13 @@
 debug_mode: true #当前模式：debug or release
 signup_enabled: true
-smtp_username: 
-smtp_password: 
-smtp_host: 
+smtp_username: chenkeao@foxmail.com
+smtp_password: fwtztnohgedzdhed
+smtp_host: smtp.qq.com:465
+ssl_enable: true
 session_secret: blog
-domain:
+domain: http://127.0.0.1:8090
 public: static
 addr: :8090
-backup_key:
-# dsn: wblog.db?_loc=Asia/Shanghai
 db_user: root
 db_password: 056613
 db_name: blog_db
@@ -16,4 +15,5 @@ db_host: localhost
 db_port: 3306
 notify_emails:
 page_size: 5
+# 图床地址
 smms_fileserver: https://sm.ms/api/v2/upload
